--- a/DumbledroidExample/res/values/strings.xml
+++ b/DumbledroidExample/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">Dumbledroid Example</string>
+    <string name="title_activity_jedi">Jedi</string>
 
 </resources>
