Adds FlickrActivity (no image loading yet).

--- a/DumbledroidExample/res/values/strings.xml
+++ b/DumbledroidExample/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Dumbledroid Example</string>
     <string name="title_activity_jedi">Jedi</string>
     <string name="title_activity_sith">Sith</string>
+    <string name="title_activity_flickr">Flickr search</string>
 
 </resources>
